Wed Jun 16 18:42:26 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * connectors/dds4ccm/impl/dds/ContentFilterSetting.h:
        * connectors/dds4ccm/impl/dds/ContentFilterSetting.cpp:
        * connectors/dds4ccm/impl/dds/DDS_Event_Connector_T.h:
        * connectors/dds4ccm/impl/dds/DDS_State_Connector_T.h:
        * connectors/dds4ccm/impl/dds/DataReader_T.h:
        * connectors/dds4ccm/impl/dds/Topic.h:
        * connectors/dds4ccm/impl/dds/Updater_T.h:
        * connectors/dds4ccm/impl/dds/Writer_T.h:
          Layout changes

Wed Jun 16 14:20:13 UTC 2010  Simon Massey  <simon dot massey at prismtech dot com>

        * connectors/dds4ccm/NDDS_DDS4CCM_CIAO.mwc:

          Removed refereance to $(CIAO_ROOT)/connectors/dds4ccm/impl/logger
          directory removed by: Wed Jun  9 18:51:13 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

Wed Jun 16 13:49:30 UTC 2010  Marcel Smit  <msmit@remedy.nl>

        * connectors/dds4ccm/tutorials/Shapes/Shapes_asm/ports/Shapes.mpb:
          Fuzz.

Wed Jun 16 13:38:01 UTC 2010  Marcel Smit  <msmit@remedy.nl>

        * connectors/dds4ccm/tutorials/Shapes/Shapes_asm/ShapesControl_comp/ShapesControl_exec.cpp:
          Added error handling.

Wed Jun 16 12:58:24 UTC 2010  James H. Hill  <hillj at cs dot iupui dot edu>

        * connectors/dds4ccm/examples/Shapes/models/README:
        * connectors/dds4ccm/models/README:

          Added several README documents.

Wed Jun 16 12:51:22 UTC 2010  Marcel Smit  <msmit@remedy.nl>

        * connectors/dds4ccm/tutorials/Shapes/Shapes_asm/ShapesControl_comp/ShapesControl_obj.mpc:
        * connectors/dds4ccm/tutorials/Shapes/Shapes_asm/ShapesControl_comp/ports/ShapesControl_obj.idl:
        * connectors/dds4ccm/tutorials/Shapes/Shapes_asm/ShapesReceiver_comp/ShapesReceiver_exec.h:
        * connectors/dds4ccm/tutorials/Shapes/Shapes_asm/ShapesReceiver_comp/ShapesReceiver_exec.cpp: