@@ -1,3 +1,8 @@
+Wed Jun 16 19:13:32 UTC 2010  Marcel Smit  <msmit@remedy.nl>
+
+        * connectors/dds4ccm/impl/dds/ContentFilterSetting.cpp:
+          Resolved memory leak.
+
 Wed Jun 16 18:42:26 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>
 
         * connectors/dds4ccm/impl/dds/ContentFilterSetting.h:
